<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backposter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/icon3"
                app:layout_collapseMode="parallax" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/title_activity_detail"
                android:src="@drawable/icon2"
                app:layout_anchorGravity="bottom|start" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="2"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black"
                tools:text="@string/rating" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/release_date"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom"
                android:padding="8dp"
                android:textColor="@color/black"
                tools:text="@string/ratingmovie" />

            <ImageView
                android:id="@+id/fab"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|end"

                android:src="@drawable/ic_star_yellow_24dp"
                android:layout_marginRight="21dp"
                android:layout_below="@+id/scroll"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="21dp" />

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/poster">

                <TextView
                    android:id="@+id/synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="16dp"
                    android:text="@string/sysnopsis"
                    android:textColor="@color/black" />

            </ScrollView>

            <Button
                android:id="@+id/garis"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_below="@id/scroll"
                android:text="@string/testing" />

            <TextView
                android:id="@+id/trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/garis"
                android:layout_marginTop="7dp"
                android:text="@string/trailer"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailervideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailer"
                android:layout_marginTop="5dp"
                android:scrollbars="vertical"
                android:src="@drawable/ic_play_arrow_black_24dp" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
